crates/uselesskey-x509/tests/snapshots/snapshots_x509__chain_hostname_mismatch.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 390
expression: result
---
variant: hostname_mismatch
leaf_cn: wrong.example.com
root_cn: chain-neg.example.com Root CA
leaf_differs_from_good: true
has_crl: false
