crates/uselesskey-x509/tests/snapshots/snapshots_x509__chain_intermediate_metadata.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 252
expression: cert_metadata(chain.intermediate_cert_der())
---
version: V3
subject: CN=chain.snapshot.example.com Intermediate CA
issuer: CN=chain.snapshot.example.com Root CA
serial: "2b:7b:2b:0a:1e:46:e6:6a:c0:74:fc:76:fa:2c:fc:3f"
signature_algorithm: 1.2.840.113549.1.1.11
not_before: "Sat, 05 Jul 2025 00:00:00 +0000"
not_after: "Thu, 04 Jul 2030 00:00:00 +0000"
is_ca: true
extensions:
  - oid: 2.5.29.15
    critical: true
    parsed: "KeyUsage(digital_signature=true, key_encipherment=false, key_cert_sign=true, crl_sign=true)"
  - oid: 2.5.29.14
    critical: false
    parsed: other
  - oid: 2.5.29.19
    critical: true
    parsed: "BasicConstraints(ca=true, pathlen=Some(0))"
