crates/uselesskey-x509/tests/snapshots/snapshots_x509__chain_revoked_leaf.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 411
expression: result
---
variant: revoked_leaf
leaf_cn: chain-revoked.example.com
root_cn: chain-revoked.example.com Root CA
leaf_differs_from_good: true
has_crl: true
