crates/uselesskey-x509/tests/snapshots/snapshots_x509__chain_root_metadata.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 264
expression: cert_metadata(chain.root_cert_der())
---
version: V3
subject: CN=chain.snapshot.example.com Root CA
issuer: CN=chain.snapshot.example.com Root CA
serial: "78:dd:c0:9d:ee:55:b7:49:df:60:59:b1:27:da:30:00"
signature_algorithm: 1.2.840.113549.1.1.11
not_before: "Sat, 05 Jul 2025 00:00:00 +0000"
not_after: "Tue, 03 Jul 2035 00:00:00 +0000"
is_ca: true
extensions:
  - oid: 2.5.29.15
    critical: true
    parsed: "KeyUsage(digital_signature=true, key_encipherment=false, key_cert_sign=true, crl_sign=true)"
  - oid: 2.5.29.14
    critical: false
    parsed: other
  - oid: 2.5.29.19
    critical: true
    parsed: "BasicConstraints(ca=true, pathlen=Some(1))"
