crates/uselesskey-x509/tests/snapshots/snapshots_x509__corrupt_pem_bad_header.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 319
expression: result
---
variant: BadHeader
contains_begin_certificate: false
contains_begin_corrupted: true
