crates/uselesskey-x509/tests/snapshots/snapshots_x509__identity_pem_shape.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 459
expression: result
---
contains_cert: true
contains_key: true
section_count: 2
